# code-quality

./: .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  LICENSE  README.md  knip.json  nx.json  oxlint.config.mjs  oxlint.workspace.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  stryker.config.json  tsconfig.base.json  vitest.config.mts  vitest.stryker.config.mts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
cli/: LICENSE  README.md  package.json  project.json
cli/src/: index.ts
elixir/: .formatter.exs  README.md  mix.exs  package.json  project.json
elixir/configs/: credo.exs  dot_doctor.exs  dot_formatter.exs  mix_dialyzer_snippet.exs
elixir/lib/: the_thracian_credo.ex
elixir/scripts/: check.mjs
elixir/test/: consumer_activation_test.exs  install_test.exs
rust/: Cargo.toml  README.md  package.json  project.json
rust/configs/: cargo-lints-package.toml  cargo-lints-workspace.toml  clippy.toml  rustfmt.toml
rust/configs/checks/depth/: Cargo.toml
rust/configs/checks/depth/src/: lib.rs
rust/scripts/: build.mjs  check.mjs
rust/src/: main.rs
rust/tests/: install.rs
scripts/: add-js-extensions.mjs  release-plan.mjs
test/: quality-thresholds.test.mjs  release-plan.test.mjs  setup.ts
ts/: CHANGELOG.md  README.md  package.json  project.json
ts/bench/: benchmark.ts  effect-benchmark-optimization-report.md  effect-plugin-performance-breakdown.md  effect-rules.ts  fixtures.ts  import-fixtures.ts  performance-budgets.json  performance-estimate.ts  performance-gate.ts  rfd-perf.ts  (+2 more)
(+163 files in other folders)
